--- a/index.css
+++ b/index.css
@@ -1,4 +1,9 @@
-.logo {
-  width: 200px;
-  height: 200px;
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+body {
+  background-color: #f3f3f3;
 }
